--- a/BreakfastClub/Views/Home/Index.cshtml
+++ b/BreakfastClub/Views/Home/Index.cshtml
@@ -36,8 +36,8 @@
                 </div>
 
                 <div class="res-input">
-                    <label for="Date">Wanneer en hoelaat?</label>
-                    <input for="Date" type="date" id="reservation_date" name="Date" />
+                    <label for="DateTime">Wanneer en hoelaat?</label>
+                    <input for="DateTime" type="datetime-local" id="reservation_datetime" name="Date" />
                     <span asp-validation-for="Date" class="text-danger"></span>
                 </div>
 
