--- a/BreakfastClub/Views/Reservation/List.cshtml
+++ b/BreakfastClub/Views/Reservation/List.cshtml
@@ -12,7 +12,7 @@
     <h1>List</h1>
 
     <p>
-        <a asp-action="Create">Create New</a>
+        <a asp-asp-controller="Reservation" asp-action="Create">Create New Reservation</a>
     </p>
     <table class="table">
         <thead>
@@ -21,7 +21,7 @@
                     @Html.DisplayNameFor(model => model.Name)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.ReservationSeats)
+                    Party Size
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Date)
