--- a/BreakfastClub/Views/Home/Dashboard.cshtml
+++ b/BreakfastClub/Views/Home/Dashboard.cshtml
@@ -4,4 +4,8 @@
 @{
 }
 
-<h1>Huzzah, a reservation</h1>
+<h1>List of reservations with create</h1>
+
+<h1>list of booths with a select for dates</h1>
+
+<h1>go to menu </h1>
