--- a/BreakfastClub/Views/Menu/Create.cshtml
+++ b/BreakfastClub/Views/Menu/Create.cshtml
@@ -1,18 +1,15 @@
 ﻿@model BreakfastClub.Models.MenuItem
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
 }
 
-<h1>Edit</h1>
-
-<h4>@Html.DisplayNameFor(model => model.Name)</h4>
+<h1>Add an item to the menu!</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -41,14 +38,15 @@
                 </select>
                 <span asp-validation-for="Course" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-controller="Menu" asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
