--- a/BreakfastClub/Views/Menu/Menu.cshtml
+++ b/BreakfastClub/Views/Menu/Menu.cshtml
@@ -47,7 +47,7 @@
                         @Html.DisplayFor(modelItem => item.Description)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Price)
+                        €@Html.DisplayFor(modelItem => item.Price)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Course)
