--- a/BreakfastClub/Views/Menu/Index.cshtml
+++ b/BreakfastClub/Views/Menu/Index.cshtml
@@ -11,7 +11,7 @@
 {
     <h1>Our Menu</h1>
 
-    <table class="table">
+    <table class="food-table">
         <thead>
             <tr>
                 <th>
@@ -58,7 +58,7 @@
     </table>
 
     <p>
-        <a asp-controller="Menu" asp-action="Create">Add to Menu, hmm!</a>
+        <a class="create-food" asp-controller="Menu" asp-action="Create">Add to Menu, hmm!</a>
     </p>
 }
 else
