--- a/BreakfastClub/Areas/Identity/Pages/Account/Login.cshtml
+++ b/BreakfastClub/Areas/Identity/Pages/Account/Login.cshtml
@@ -8,9 +8,9 @@
 <h1>@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-md-4">
-        <section>
+        <section class="login-container">
             <form id="account" method="post">
-                <h2>Use a local account to log in. hey yo</h2>
+                <h2>Login for the employee portal. If you don't have a login, go to <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a></h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-floating">
@@ -48,7 +48,7 @@
             </form>
         </section>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    @* <div class="col-md-6 col-md-offset-2">
         <section>
             <h3>Use another service to log in.</h3>
             <hr />
@@ -77,7 +77,7 @@
                 }
             }
         </section>
-    </div>
+    </div> *@
 </div>
 
 @section Scripts {
