--- a/BreakfastClub/Views/Home/Index.cshtml
+++ b/BreakfastClub/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <h1 class="display-4">Welkom!</h1>
     <div class="row">
         <div class="col-6">
-            <form method="post" asp-controller="Home" asp-action="Create" class="form-control">
+            <form method="post" asp-controller="Home" asp-action="Create" class="reserve-form form-control">
                 @Html.AntiForgeryToken()
                 <div>
                     <h2>Reserveren</h2>
