--- a/BreakfastClub/Views/Menu/Edit.cshtml
+++ b/BreakfastClub/Views/Menu/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Change the details of the menu item here</h1>
 
 <h4>@Html.DisplayNameFor(model => model.Name)</h4>
 <hr />
