--- a/BreakfastClub/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BreakfastClub/Areas/Identity/Pages/Account/Register.cshtml
@@ -58,8 +58,9 @@
                     </form>
                 }
             }
-        </section> *@
-    </div>
+        </section> 
+        </div>*@
+    
 </div>
 
 @section Scripts {
